Added new image to hello World!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 
 <h1>Hello World!</h1>
+<div><img src="OreoCake.jpg" alt="Cake of Oreo" 
+    style ="width: 100%;max-width:960px">
+</div>
 <p>This is the first file in my new Git Repo.</p>
 <p>New line in our file.</p>
 </body>
