--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h1>Hello World!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>New line in our file.</p>
+<p>Emergency Fix and merging example</p>
 </body>
 </html>
