added new image

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
 <h1>Hello World!</h1>
 <div><img src="OreoCake.jpg" alt="Cake of Oreo" 
-    style ="width: 100%;max-width:960px">
+    style ="width: 100%;max-width:500px">
 </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>New line in our file.</p>
+<div><img src="AluTikiBurger.jpg" alt="Veg Burger" 
+    style ="width: 100%;max-width:400px">
+</div>
 </body>
 </html>
